Merge branch '3.labos-fix' into main, favoring 3.labos-fix on conflicts